[package]
name = "anpcli"
version = "0.1.0"
edition = "2021"
authors = ["Junan Lu <345842425@qq.com>"]
description = "A command line argument parser, which is simple, easy to use and highly customizable"
homepage = "https://github.com/AnplusGroup/anp-cli"
repository = "https://github.com/AnplusGroup/anp-cli"
readme = "README.md"
license-file = "LICENSE"
keywords = ["cli", "commandline", "parser", "option", "argument"]
categories = ["command-line-interface", "command-line-utilities"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
